--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,12 @@ h1 { margin-bottom: 20px; }
 	height: 210px;
 	overflow: hidden;
 }
+.next-page {
+   	width: 30%;
+  	margin-right: auto;
+  	margin-left: auto;
+  	display: block;
+}
 
 .tab-content {
 	padding: 30px;
