--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,8 +1,3 @@
-/* -------------------------------- 
-
-Primary style
-
--------------------------------- */
 html * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -318,45 +313,6 @@ main {
   animation: cd-fade-in 0.3s;
 }
 
-/* -------------------------------- 
-
-xkeyframes 
-
--------------------------------- */
-@-webkit-keyframes cd-fade-in {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-@-moz-keyframes cd-fade-in {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes cd-fade-in {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-/* -------------------------------- 
-
-sarah 
-
---------------------------------*/
-
 #edit-template, #edit-style {
     width: 100%;
     height: 200px;
@@ -381,4 +337,27 @@ sarah
 	margin-top: 10px;
 	width: 50px;
 	padding: 0px 0px 0px 10px;
+}
+
+h1 { margin-bottom: 20px; }
+.tab-content { padding-top: 15px;}
+#token-form, #api-tester { display: none; }
+.col-sm-2, .col-sm-7 { 	padding: 5px; }
+.btn-default { background-color: #EEE; }
+.btn-default.active { background-color: #5cb85c; color: #FFF; }
+.tab-content {
+	background-color: #FFF;
+	border-left: solid 1px #ccc;
+	border-right: solid 1px #ccc;
+	min-height: 800px;
+}
+.container-fluid {
+	width: 90%;
+}
+.thumbnail {
+  	display: inline-block;
+}
+
+.tab-content {
+	padding: 30px;
 }
